welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:4: error: not found: value nbPas
	nbPas = nbPas + 1
        ^Program:9: error: reassignment to val
	dejaFait = dejaFait + 1	
                 ^